fix connection and countries
Signed-off-by: Jan N. Klug <github@klug.nrw>